# product-recommendation-engine-vector-dbs

./: Dockerfile  README.md  credentials.json  pyproject.toml
app/: app.py  create_embeddings.py  get_prediction.py  ingest_data.py  save_embeddings.py
